--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
     "country-state-city": "^3.1.2",
+    "flowbite-react": "^0.9.0",
     "js-cookie": "^3.0.1",
     "razorpay": "^2.9.2",
     "react": "^18.2.0",
