--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,10 +1,16 @@
 {
     "version": 2,
-    "name":"e-shop-tutorial",
-    "builds":[
-        {"src":"server.js","use":"@vercel/node"}
+    "name": "e-shop-tutorial",
+    "builds": [
+        {
+            "src": "./server.js",
+            "use": "@vercel/node"
+        }
     ],
-    "routes":[
-        {"src":"/(.*)","dest":"/server.js"}
+    "routes": [
+        {
+            "src": "/(.*)",
+            "dest": "/server.js"
+        }
     ]
 }
