--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -7,6 +7,12 @@
             "use": "@vercel/node"
         }
     ],
+    "rewrites": [
+        {
+            "source": "/{.*}",
+            "destination": "/"
+        }
+    ],
     "routes": [
         {
             "src": "/(.*)",
