--- a/backend/package.json
+++ b/backend/package.json
@@ -2,13 +2,13 @@
   "name": "e-shop-tutorial",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "engines": {
     "node": "18.x"
   },
   "scripts": {
-    "dev": "nodemon server.js",
-    "start": "node server.js"
+    "dev": "nodemon index.js",
+    "start": "node index.js"
   },
   "author": "shahriar Sajeeb",
   "license": "ISC",
