--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
     "node": "18.x"
   },
   "scripts": {
-    "dev": "nodemon index.js",
+    "dev": "node index.js",
     "start": "node index.js"
   },
   "author": "shahriar Sajeeb",
