--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,16 +1,15 @@
 {
     "version": 2,
-    "name": "e-shop-tutorial",
     "builds": [
         {
-            "src": "/index.js",
+            "src": "./index.js",
             "use": "@vercel/node"
         }
     ],
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "/index.js"
+            "dest": "/"
         }
     ]
 }
