--- a/backend/package.json
+++ b/backend/package.json
@@ -7,8 +7,8 @@
     "node": "18.x"
   },
   "scripts": {
-    "dev": "node index.js",
-    "start": "node index.js"
+    "dev": "node api/index.js",
+    "start": "node api/index.js"
   },
   "author": "shahriar Sajeeb",
   "license": "ISC",
