--- a/backend/package.json
+++ b/backend/package.json
@@ -7,9 +7,8 @@
     "node": "18.x"
   },
   "scripts": {
-    "dev": "node api/index.js",
-    "start": "node api/index.js",
-    "vercel-build": "echo hello"
+    "dev": "nodemon index.js",
+    "start": "node index.js"
   },
   "author": "shahriar Sajeeb",
   "license": "ISC",
